<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:padding="8dp">

    <ImageView
        android:id="@+id/topImageLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/topImage"
        android:src="@drawable/login_back_top"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greetingTextLogin"
        style="@style/TextBlackBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topImageLogin" />

    <TextView
        android:id="@+id/greetingText2Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/save_your_contacts_to_cloud"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetingTextLogin" />

    <LinearLayout
        android:id="@+id/loginPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_field_back"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordArea"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetingText2Login"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_contentColor="#2600FF"
            app:ccp_countryAutoDetectionPref="SIM_LOCALE_NETWORK"
            app:ccp_countryPreference="uzb"
            app:ccp_hintExampleNumber="true"
            app:ccp_hintExampleNumberType="FIXED_LINE"
            app:ccp_rememberLastSelection="true"
            app:ccp_showFlag="false"
            app:ccp_textSize="16sp" />

        <EditText
            android:id="@+id/regPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="Phone"
            android:inputType="phone"
            android:textColor="#2600FF" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPhoneNumber"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#2600FF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_field_back"
            android:drawableStart="@drawable/ic_secure"
            android:drawableLeft="@drawable/ic_secure"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="#2600FF" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        app:layout_constraintBottom_toBottomOf="@id/loginForgetPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/loginForgetPassword"
        app:layout_constraintTop_toTopOf="@id/loginForgetPassword" />

    <TextView
        android:id="@+id/loginForgetPassword"
        style="@style/ButtonWithAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/forget_password"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/rememberMe"
        app:layout_constraintRight_toRightOf="@id/passwordArea"
        app:layout_constraintTop_toBottomOf="@id/passwordArea" />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/login_button_back"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/bottomText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/bottomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonRegistration" />

    <TextView
        android:id="@+id/buttonRegistration"
        style="@style/ButtonWithAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/sing_up"
        android:textColor="#2600FF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/bottomText"
        app:layout_constraintLeft_toRightOf="@id/bottomText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottomText" />

    <View
        android:id="@+id/backProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B2000000" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/showProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="backProgress, progress" />


</androidx.constraintlayout.widget.ConstraintLayout>