<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/dialog_back"
    android:padding="16dp">

    <TextView
        android:id="@+id/cancelAddContact"
        style="@style/ButtonWithAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/cancel"
        android:textColor="#294CA8"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/t_t1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t_t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_contact"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/cancelAddContact"
        app:layout_constraintRight_toLeftOf="@id/addContact"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addContact"
        style="@style/ButtonWithAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/done"
        android:textColor="#294CA8"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/t_t1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageNewContact"
        style="@style/ButtonWithAction"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintLeft_toLeftOf="@id/t_t1"
        app:layout_constraintRight_toRightOf="@id/t_t1"
        app:layout_constraintTop_toBottomOf="@id/t_t1" />

    <TextView
        android:id="@+id/t_t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_photo"
        android:textColor="#537E7F"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/imageNewContact"
        app:layout_constraintRight_toRightOf="@id/imageNewContact"
        app:layout_constraintTop_toBottomOf="@id/imageNewContact" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/temp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/t_t2"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newContactFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColor="#000"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/temp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="8dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/temp1"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newContactLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColor="#000"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/temp3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temp2"
        app:layout_constraintVertical_chainStyle="packed">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_contentColor="#000000"
            app:ccp_countryAutoDetectionPref="SIM_LOCALE_NETWORK"
            app:ccp_countryPreference="uzb"
            app:ccp_hintExampleNumber="true"
            app:ccp_hintExampleNumberType="FIXED_LINE"
            app:ccp_rememberLastSelection="true"
            app:ccp_showFlag="false"
            app:ccp_textSize="18sp" />

        <EditText
            android:id="@+id/regPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:hint="Phone"
            android:inputType="phone"
            android:textColor="#000000" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>