<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/actionBarTemp"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/addNewContact"
        style="@style/ButtonWithAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:contentDescription="@string/add_new_contact"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/actionBarTemp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/actionBarTemp" />

    <ImageView
        android:id="@+id/leaveContacts"
        style="@style/ButtonWithAction"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/leave"
        android:src="@drawable/ic_left"
        app:layout_constraintBottom_toBottomOf="@id/actionBarTemp"
        app:layout_constraintRight_toLeftOf="@id/addNewContact"
        app:layout_constraintTop_toTopOf="@id/actionBarTemp" />

    <TextView
        android:id="@+id/t_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/contacts"
        android:textColor="#000"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/actionBarTemp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/actionBarTemp" />

    <EditText
        android:id="@+id/searchContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/search_back"
        android:drawableStart="@drawable/ic_search"
        android:drawableLeft="@drawable/ic_search"
        android:hint="@string/search"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingRight="8dp"
        android:paddingBottom="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBarTemp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/t_text2"
        app:layout_constraintRight_toRightOf="@id/addNewContact"
        app:layout_constraintTop_toBottomOf="@id/searchContact"
        tools:listitem="@layout/contact_item" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>