<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/verifyToolbar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topText"
        style="@style/TextBlackBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/verifyCode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/topText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/please_type_the_verification_code_sent_to"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+998 XX XXX XX XX"
        android:id="@+id/verifyPhone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topText1" />

    <com.mukesh.OtpView
        android:id="@+id/verifyCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="#000"
        app:OtpItemCount="6"
        app:OtpLineColor="#000"
        app:OtpViewType="line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/login_button_back"
        android:text="@string/resend_code"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@id/verifyCode"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" />


    <View
        android:id="@+id/backProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B2000000" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/showProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="backProgress, progress" />

</androidx.constraintlayout.widget.ConstraintLayout>